--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #02010a;
+}
 #cabecera {
   width: 100%;
   background-color: #5b7989;
@@ -11,7 +14,7 @@
   color: white;
   font-size: 35px;
   font-style: italic;
-  font-family: cursive;
+  font-family: Dancing Script;
   text-shadow: 2px 2px 2px #02010a;
 }
 #cabecera #menu_desktop {
@@ -23,7 +26,7 @@
   color: white;
   margin: 15px 20px 5px 10px;
   font-style: italic;
-  font-family: cursive;
+  font-family: Dancing Script;
   font-size: 20px;
 }
 #cabecera #menu_responsive {
@@ -84,9 +87,73 @@
 }
 #central img {
   width: 80%;
-  height: 78%;
+  height: 95%;
   margin-top: 1%;
   margin-left: 8%;
   margin-right: 8%;
   border: 2px solid black;
+}
+#secundario {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  flex-direction: row;
+  background-color: #d5c75f;
+  border: 1px;
+}
+#secundario #art_paisaje {
+  background-color: red;
+  width: 50%;
+  height: 300px;
+  float: left;
+  border: solid black 2px;
+  margin: 10px 0px 0px 50px;
+}
+#art_paisaje img {
+  width: 100%;
+  height: 100%;
+}
+#art_paisaje a {
+  font-family: Dancing Script;
+  font-style: italic;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+  float: left;
+  margin-left: 40%;
+}
+
+#secundario #art_retrato {
+  background-color: red;
+  width: 50%;
+  height: 300px;
+  float: right;
+  border: solid black 2px;
+  margin: 10px 60px 0px 50px;
+}
+#art_retrato img {
+  width: 100%;
+  height: 100%;
+}
+#art_retrato a {
+  font-family: Dancing Script;
+  font-style: italic;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+  float: right;
+  margin-right: 40%;
+}
+#pie {
+  width: 100%;
+  height: 150px;
+  background-color: #C6d5c5;
+  border-radius: 0px 0px 10px 10px;
+  display: flex;
+  flex-direction: row;
+}
+#pie div {
+  width: 25%;
+  height: 100%;
+  margin-left: 30px;
 }
