--- a/css/estilos.css
+++ b/css/estilos.css
@@ -155,9 +155,43 @@ body {
   height: auto;
 }
 
+/* Inicia PAISAJES.HTML */
+
+#cont_paisajes {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #d5c75f;
+}
+#cont_paisajes div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+#cont_paisajes div article[id ^= 'p'] {
+  width: 33.33%;
+}
+#cont_paisajes div article img {
+  width: 85%;
+  margin: 5% 7.5% 5% 7.5%;
+}
+#blur {
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+#sepia {
+  -webkit-filter: sepia(90%);
+  filter: sepia(90%);
+}
+.eg {
+  -webkit-filter: grayscale (100%);
+  filter: grayscale(100%);
+}
+
 
 /* MEDIA QUERY MOVIL */
 
+/* INDEX */
 @media (max-width:899px) {
   #contenido {
     width: 100%;
@@ -223,6 +257,16 @@ body {
     width: 100%;
     margin-left: 8%;
   }
+  /* PAISAJES */
+
+  #cont_paisajes div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  #cont_paisajes div article[id ^= 'p'] {
+    width: 100%;
+  }
 }
 
-/* Finaliza Diseño del INDEX */
+/**/
